@@ -1,4 +1,4 @@
-__version__ = '1.6.7'
+__version__ = '1.6.7+git'
 CITATION = '''\
     Coelho, L.P., (2017). Jug: Software for Parallel Reproducible Computation in
     Python. Journal of Open Research Software. 5(1), p.30.
