@@ -1,5 +1,6 @@
 version 1.6.7+
 	* Add `cached_glob()` function
+	* Fix NoLoad (issue #73)
 
 version 1.6.7 Fri Apr 13 by luispedro
 	* Fix issue with deeply recursive dependency structures and barrier()
